--- a/orbit-portal/bower.json
+++ b/orbit-portal/bower.json
@@ -15,5 +15,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "XB-PointStream": "asalga/XB-PointStream"
+  }
 }
