--- a/orbit-portal/bower.json
+++ b/orbit-portal/bower.json
@@ -17,6 +17,22 @@
     "tests"
   ],
   "dependencies": {
-    "XB-PointStream": "asalga/XB-PointStream"
+    "XB-PointStream": "asalga/XB-PointStream",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^1.0.0",
+    "paper-card": "PolymerElements/paper-card#^1.0.0",
+    "paper-input": "PolymerElements/paper-input#^1.0.0",
+    "paper-item": "PolymerElements/paper-item#^1.0.0",
+    "paper-material": "PolymerElements/paper-material#^1.0.0",
+    "paper-progress": "PolymerElements/paper-progress#^1.0.0",
+    "paper-styles": "PolymerElements/paper-styles#^1.0.0",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
+    "paper-button": "PolymerElements/paper-button#^1.0.0",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
+    "paper-menu": "PolymerElements/paper-menu#^1.0.0"
   }
 }
